syntax = "proto3";

option csharp_namespace = "HealthCheck.Services";

package HealthCheck;

// import "google/api/annotations.proto";

service HealthCheck {
    rpc CheckHealthRequest (HealthCheckRequest) returns (HealthCheckResponse) {
        // option (google.api.http).get = "/health";
    }
}

message HealthCheckResponse {
    bool healthy = 1; 
}

message HealthCheckRequest {
}
